ingress-nginx/helloapp-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: helloapp-1
  name: helloapp-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp-1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: helloapp-1
    spec:
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        name: hello-app
        ports:
        - containerPort: 8080
        resources: {}
status: {}
