ingress-nginx/helloapp-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: helloapp-2
  name: helloapp-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp-2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: helloapp-2
    spec:
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        name: hello-app
        ports:
        - containerPort: 8080
        resources: {}
status: {}
