ingress-nginx/ingress-prefix-rule.yaml
# kubectl create ingress ing-demo --class=nginx --rule="foo.com/v1*=helloapp-1:8080" --rule="foo.com/v2*=helloapp-2:8080"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-demo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: foo.com
    http:
      paths:
      - backend:
          service:
            name: helloapp-1
            port:
              number: 8080
        path: /v1
        pathType: Prefix
      - backend:
          service:
            name: helloapp-2
            port:
              number: 8080
        path: /v2
        pathType: Prefix
