ingress-nginx/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  # annotations:
  #   ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: helloapp-1
            port:
              number: 8080
        path: /v1
        pathType: Prefix
      - backend:
          service:
            name: helloapp-2
            port:
              number: 8080
        path: /v2
        pathType: Prefix
