ingress-nginx/my-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: xxx-rabbitmq
    http:
      paths:
      - backend:
          service:
            name: helloapp1-svc-cip
            port:
              number: 80
        path: /
        pathType: Exact
